Fixed some style issues